# advocu-gde

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
advocu_manager/: __init__.py  api.py  cli.py  templates.py
